--- a/cam_angle_driver/package.xml
+++ b/cam_angle_driver/package.xml
@@ -8,6 +8,10 @@
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
+  <depend>tf2_ros</depend>
+  <depend>geometry_msgs</depend>
+  <depend>std_msgs</depend>
+
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
